# sec-financial-intelligence

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
app/: config.py  db.py  main.py
app/models/: filing.py
app/routers/: analysis.py  ask.py  health.py  ingest.py
app/schemas/: filing.py
app/services/: analyst.py  edgar.py  embedder.py  ocr.py  retriever.py
scripts/: seed_demo.py
tests/: conftest.py  test_analysis.py  test_health.py  test_ingest.py
